--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 /* Panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
-/* Black fade overlay */
-#black-fade { position:fixed; inset:0; background:#000; z-index:50; opacity:1; transition:opacity 2s ease; pointer-events:none; }
+/* Black intro fade overlay */
+#intro-black { position:fixed; inset:0; background:#000; z-index:50; }
 
 /* License bar */
 #license-bar { position: fixed; bottom:12px; left:50%; transform:translateX(-50%); max-width:92%; background: rgba(0,0,0,0.18); backdrop-filter:blur(10px); color:#fff; padding:10px 18px; font-size:13px; z-index:12; text-align:center; border-radius:12px; white-space:pre-wrap; overflow-y:auto; }
 
 /* Intro overlay */
-#overlay { position: fixed; inset:0; background: rgba(0,0,0,0.55); display:flex; align-items:center; justify-content:center; z-index:60; }
+#overlay { position: fixed; inset:0; background: rgba(0,0,0,0.60); display:flex; align-items:center; justify-content:center; z-index:60; }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
     width:45%;
     max-width:90vw;
     height:auto;
     background: rgba(255,255,255,0.12);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(8px);
     border-radius:18px;
     padding:24px;
     color:#fff;
@@ -41,7 +41,10 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
     line-height:1.3;
 }
 #overlay-content p { margin:0; }
-#intro-icon { width:80px; height:80px; margin:0 auto 12px auto; display:block; transform-style: preserve-3d; perspective:800px; }
+#intro-icon {
+    width:80px; height:80px; margin:0 auto 12px auto; display:block;
+    transform-style: preserve-3d; perspective:800px;
+}
 #instructions-line { font-weight:700; text-decoration:underline; margin-top:8px; color:#fff; }
 #instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; text-align:center; }
 #instructions-list p { margin:6px 0; text-align:center; }
@@ -49,19 +52,22 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 /* divider line */
 #overlay-content hr { border:1px solid #fff; margin:12px auto; width:60%; }
 
-/* dismiss message pulsing */
-@keyframes pulseFade { 0%{opacity:0.3;} 50%{opacity:1;} 100%{opacity:0.3;} }
-#dismiss-message { margin-top:24px; font-size:0.95rem; color:#d0d0d0; text-align:center; white-space:pre-line; animation: pulseFade 1.5s infinite; }
+/* dismiss message with pulsing */
+#dismiss-message { margin-top:24px; font-size:0.95rem; color:#d0d0d0; text-align:center; white-space:pre-line; animation:pulseDismiss 2s infinite; }
+@keyframes pulseDismiss {
+    0%, 100% { opacity:1; }
+    50% { opacity:0.4; }
+}
 
 /* tooltip preview (independent) */
 #tooltip-preview { display:none; position:fixed; width:max-content; max-width:220px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:6px 10px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); }
 #tooltip-preview img { width:100%; height:auto; object-fit:contain; border-radius:6px; }
 
 /* hotspot panel */
-#hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none; }
+#hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:block; }
 
 /* 360 video panel */
-#video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.28); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#d0d0d0; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
+#video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.30); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#d0d0d0; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:block; }
 
 /* youtube modal */
 #youtube-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
@@ -80,14 +86,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #vr-button { top:64px; display:none; }
 
 /* Fullscreen button match QR style */
-.pannellum-fullscreen-button {
-    padding:8px 12px;
-    border-radius:12px;
-    background: rgba(0,0,0,0.18);
-    backdrop-filter: blur(8px);
-    color:#fff;
-    box-shadow:none;
-}
+.pannellum-fullscreen-button { padding:8px 12px; border-radius:12px; background: rgba(0,0,0,0.18); backdrop-filter: blur(8px); color:#fff; box-shadow:none; }
 
 /* responsive adjustments */
 @media(max-width:900px){
@@ -104,13 +103,14 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 <body>
 
 <div id="panorama"></div>
-<div id="black-fade"></div>
+<div id="intro-black"></div>
 
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
     <img id="intro-icon" src="LexIcon.png" alt="Lex Icon">
-    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-    <p>If you would like to see my other work click <span id="preview-link" style="display:inline-block; padding:4px 8px; border-radius:6px; background:rgba(255,255,255,0.2); cursor:pointer;">here</span>.</p>
+    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research.<br>
+    These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
+    <p>If you would like to see my other work click <span id="preview-link" style="padding:4px 8px; border-radius:6px; background:rgba(255,255,255,0.18); cursor:pointer;">here</span>.</p>
 
     <hr>
 
@@ -120,8 +120,6 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
       <p>• Scroll to zoom in/out.</p>
       <p>• Use fullscreen button for best experience.</p>
     </div>
-
-    <div style="height:12px;"></div>
 
     <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
@@ -139,7 +137,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 </div>
 
 <div id="video-link-panel" aria-hidden="true">
-  <span id="manhattan-video-text" style="color:#d0d0d0; cursor:pointer;">Click Here to Watch a 360 Video of this Location</span>
+  <span id="manhattan-video-text">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
 <div id="license-bar">Loading license...</div>
@@ -184,23 +182,17 @@ const qrContent=document.getElementById('qr-content');
 const youtubeOverlay=document.getElementById('youtube-overlay');
 const youtubeFrame=document.getElementById('youtube-frame');
 const licenseBar=document.getElementById('license-bar');
-const blackFade=document.getElementById('black-fade');
+const introBlack=document.getElementById('intro-black');
 const introIcon=document.getElementById('intro-icon');
-let coinSide=true;
 
 /* LICENSE load */
 fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>licenseBar.textContent=text).catch(()=>{licenseBar.textContent='LICENSE file not found.';});
-
-/* black fade animation */
-setTimeout(()=>{ blackFade.style.opacity=0; },1000);
 
 /* overlay dismissal */
 function dismissOverlay(e){
   if(e.target.closest('#overlay-content a')) return;
   overlay.setAttribute('aria-hidden','true');
   overlay.style.display='none';
-  hotspotPanel.style.display='block';
-  videoLinkPanel.style.display='block';
 }
 overlay.addEventListener('click', dismissOverlay);
 
@@ -244,25 +236,26 @@ document.addEventListener('keydown', e=>{
   }
 });
 
-/* spinning coin icon logic */
-function spinIcon(){
-    let deg=0;
-    let duration=1500; // 1.5s per flip
-    const step=()=> {
-        deg+=4;
-        introIcon.style.transform=`rotateY(${deg}deg)`;
-        if(deg<180){
-            requestAnimationFrame(step);
-        } else {
-            coinSide=!coinSide;
-            introIcon.src=coinSide?"LexIcon.png":"LexIconWhite,png.png";
-            introIcon.style.transform=`rotateY(0deg)`; // reset for next spin
-            setTimeout(spinIcon,2000); // spin every 2s
-        }
-    };
-    requestAnimationFrame(step);
+/* Intro fade in */
+setTimeout(()=>{
+  introBlack.style.transition='opacity 2s';
+  introBlack.style.opacity=0;
+  setTimeout(()=>introBlack.style.display='none',2000);
+},1000);
+
+/* Coin spin animation */
+let flipState=true;
+function flipIcon(){
+  introIcon.style.transition='transform 1s ease-in-out';
+  introIcon.style.transform='rotateY(180deg)';
+  setTimeout(()=>{
+    introIcon.src = flipState ? 'LexIconWhite,png.png' : 'LexIcon.png';
+    flipState = !flipState;
+    introIcon.style.transition='transform 1s ease-in-out';
+    introIcon.style.transform='rotateY(0deg)';
+  },500);
 }
-spinIcon();
+setInterval(flipIcon,3000);
 </script>
 </body>
 </html>
